ui/src/App.scss
$orange: hsl(18, 89%, 62%);
$orange-lighter: hsl(18, 89%, 42%);

$yellow: #ecb341;
$red: #d60000;
$blue: #0030cc;
$darkBlue: #48d15a;
$navbar-height: 2.25rem;

$grey-darker: hsl(221, 14%, 21%);
$grey-dark: hsl(221, 14%, 29%);
$grey: hsl(221, 14%, 48%);
$grey-light: hsl(221, 14%, 71%);
$grey-lighter: hsl(221, 14%, 86%);
$grey-lightest: hsl(221, 14%, 93%);

// Override global Sass variables from the /utilities folder
@use "bulma/sass/utilities" with (
  $family-primary: "B612",
  $family-monospace: "B612 Mono",
  $primary: $orange,
  $warning: $yellow,
  $danger: $red,
  $info: $blue,
  $link: $orange-lighter,
  $weight-light: 100,
  $weight-normal: 300,
  $weight-medium: 500,
  $weight-semibold: 600,
  $weight-bold: 700,
  $control-border-width: 2px,
  $grey-darker: $grey-darker,
  $grey-dark: $grey-dark,
  $grey: $grey,
  $grey-light: $grey-light,
  $grey-lighter: $grey-lighter,
  $grey-lightest: $grey-lightest
);

// Import the components we need
@forward "bulma/sass/base";
@forward "bulma/sass/helpers";
@forward "bulma/sass/grid";

@forward "bulma/sass/components/breadcrumb";
@forward "bulma/sass/components/card";
@forward "bulma/sass/components/dropdown";
@use "bulma/sass/components/message" with (
  $message-body-padding: 1em 1.5em 0em 1em
);
@use "bulma/sass/components/modal" with (
  $modal-content-width: 80rem
);
@use "bulma/sass/components/navbar" with (
  $navbar-height: $navbar-height
);
@forward "bulma/sass/components/tabs";

@use "bulma/sass/form" with (
  $input-shadow: none
);

// Import the bulma elements we need
@forward "bulma/sass/elements/box";
@forward "bulma/sass/elements/button";
@forward "bulma/sass/elements/content";
@forward "bulma/sass/elements/delete";
@forward "bulma/sass/elements/icon";
@forward "bulma/sass/elements/image";
@forward "bulma/sass/elements/notification";
@forward "bulma/sass/elements/table";
@forward "bulma/sass/elements/tag";
@forward "bulma/sass/elements/title";

@use "bulma/sass/layout/footer" with (
  $footer-padding: 1rem 1.5rem 1rem
);
@forward "bulma/sass/layout/hero";
@forward "bulma/sass/layout/section";
@forward "bulma/sass/layout/level";
@forward "bulma/sass/layout/container";

// Import the themes so that all CSS variables have a value
@forward "bulma/sass/themes";

// Import the fonts
@import url("assets/b612-mono/b612-mono.css");
@import url("assets/b612/b612.css");

// Other customizations
section {
  &.is-fullheight-with-navbar {
    min-height: calc(100vh - #{$navbar-height});
  }
}

.content {
  h1 {
    font-size: 1.2rem;
  }

  h2 {
    font-size: 1.1rem;
  }

  h3 {
    font-size: 1rem;
  }

  h4 {
    font-size: 0.9rem;
  }
}

.content.is-normal {
  font-size: 0.9rem;
}

.message a:not(.button):not(.tag):not(.dropdown-item) {
  text-decoration: none;
}

.table {
  is-fixed {
    table-layout: fixed;
  }

  .tbody {
    tr {
    }
  }
}

.message-sheet {
  .firstRow {
    width: 150px;
  }

  .contentBox {
    height: 400px;
  }
}

.input:invalid {
  border-color: $red;
}

@media screen {
  .is-print {
    display: none !important;
  }
}

@media print {
  @page {
    // size: A4 landscape;

    @bottom-right {
      content: counter(page);
    }

    @bottom-center {
      content: "SitRep";
    }
  }

  .is-hidden-print {
    // .no-break {
    //     word-break: normal;
    //     min-width: 150px;
    // }
    display: none !important;
  }

  .table {
    font-size: 11px;
  }

  .title.is-1 {
    font-size: 24px;
  }

  .title.is-2 {
    font-size: 20px;
  }

  .title.is-3 {
    font-size: 18px;
  }

  .title.is-4 {
    font-size: 18px;
  }

  .title.is-4 {
    font-size: 18px;
  }

  .content.is-normal {
    font-size: 11px;
  }

  .content {
    h1 {
      font-size: 14px;
    }

    h2 {
      font-size: 12px;
    }

    h3 {
      font-size: 12px;
    }

    h4 {
      font-size: 11px;
    }
  }
}

